# crayon_rt

./: .gitignore  CMakeLists.txt  README.md
include/core/: crayon.h  image.h  interaction.h  material.h  objloader.h  ray.h  scene.h  shape.h  vector.h
include/shapes/: cylinder.h  sphere.h  triangle.h  trimesh.h
scenes/: scene.json
src/core/: image.cpp  objloader.cpp
src/main/: main.cpp
src/shapes/: cylinder.cpp  sphere.cpp  triangle.cpp  trimesh.cpp
src/test/: _template.cpp
